--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,15 @@ jobs:
   build:
     uses:
       ./.github/workflows/pr.yml
-    with:
-      dockerize: true
+  dockerize:
+    needs: build
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
+      id-token: write
+    uses:
+      ./.github/workflows/dockerize.yml
 
   # prod-deploy:
   #   needs: build
