"#13 image tag update through promote action."

--- a/.github/workflows/promote.yml
+++ b/.github/workflows/promote.yml
@@ -1,32 +1,35 @@
-name: Vercel Production Deployment
-
-# env:
-#   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-#   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+name: Promote
+run-name: "Promote tag: ${{ github.sha }} to env: ${{ inputs.environment }}"
 
 on:
   workflow_call:
+    inputs:
+      environment:
+        description: 'Environment Name'
+        required: true
+        type: string
+
+env:
+  APP_NAME: auth-spa
 
 jobs:
-  Deploy-Production:
+  promote:
     runs-on: ubuntu-latest
+    environment: ${{ inputs.environment }}
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    - name: Checkout GitOps repo
+      uses: actions/checkout@v4
+      with:
+        repository: mandraghen/k8s-infrastructure
+        token: ${{ secrets.CI_GITHUB_TOKEN }}
+        ref: main
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 23.x
+    - name: Update Chart Values
+      run: yq --inplace '.image.tag = "sha-${{ github.sha }}"' infra/envs/${{ inputs.environment }}/apps/${{ env.APP_NAME }}//values.yaml
 
-      # - name: Install Vercel CLI
-      #   run: yarn global add vercel@latest
-
-      # - name: Pull Vercel Environment Information
-      #   run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
-
-      # - name: Build Project Artifacts
-      #   run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
-
-      # - name: Deploy Project Artifacts to Vercel
-      #   run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+    - name: Push changes
+      run: |
+        git config --global user.name 'mandraghen Bot'
+        git config --global user.email 'mrb.salvatore@gmail.com'
+        git commit -am "[CI] Promote image tag ${{ github.sha }} to environment ${{ inputs.environment }}"
+        git push
