--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,9 +5,6 @@ on:
     branches:
       - main
 
-env:
-  IMAGE_TAG: dev-${{ github.run_id }}-${{ github.sha }}
-
 jobs:
   build:
     uses:
@@ -22,8 +19,9 @@ jobs:
     uses:
       ./.github/workflows/dockerize.yml
 
-  # prod-deploy:
-  #   needs: build
-  #   if: ${{ success() }}
-  #   uses: ./.github/workflows/promote.yml
-  #   secrets: inherit
+  local-deploy:
+    needs: dockerize
+    uses: ./.github/workflows/promote.yml
+    with:
+      environment: local
+    secrets: inherit
